// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/DropdownMenu Default 1`] = `
<div
  className="inline-block relative"
>
  <button
    className="cursor-pointer rounded-none focus-offset focus:ring-blue-500"
    onClick={[Function]}
  >
    <a
      className="focus-offset underline transition hover:opacity-60 cursor-pointer text-blue-500 focus:ring-blue-500"
    >
      Click me
    </a>
  </button>
  <span
    aria-hidden={true}
    className="absolute top-full left-1 w-3 h-3 bg-white shadow transition transform rotate-45 translate-y-2 opacity-0 opacity-0"
  />
  <section
    className="absolute top-full left-0 transform transition whitespace-nowrap pt-3 w-auto max-width-md transform-y-4 opacity-0 pointer-events-none"
  >
    <div
      className="bg-white shadow-md"
    >
      <div
        className="py-2"
      >
        <a
          className="group block w-full text-black px-4 py-1.5 cursor-pointer transition text-left hover:bg-blue-50 hover:text-blue-500"
          href="/projects"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Meine Projekte
        </a>
        <a
          className="group block w-full text-black px-4 py-1.5 cursor-pointer transition text-left hover:bg-blue-50 hover:text-blue-500"
          href="/account"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Account
        </a>
        <button
          className="group block w-full text-black px-4 py-1.5 cursor-pointer transition text-left hover:bg-blue-50 hover:text-blue-500"
          onClick={[Function]}
        >
          Logout
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots UI Elements/DropdownMenu With Custom Children 1`] = `
<div
  className="inline-block relative"
>
  <button
    className="cursor-pointer rounded-none focus-offset focus:ring-blue-500"
    onClick={[Function]}
  >
    <a
      className="focus-offset underline transition hover:opacity-60 cursor-pointer text-blue-500 focus:ring-blue-500"
    >
      Click me
    </a>
  </button>
  <span
    aria-hidden={true}
    className="absolute top-full left-1 w-3 h-3 bg-white shadow transition transform rotate-45 translate-y-2 opacity-0 opacity-0"
  />
  <section
    className="absolute top-full left-0 transform transition whitespace-nowrap pt-3 w-auto max-width-md transform-y-4 opacity-0 pointer-events-none"
  >
    <div
      className="bg-white shadow-md"
    >
      <div
        className="py-2"
      >
        <a
          className="group block w-full text-black px-4 py-1.5 cursor-pointer transition text-left hover:bg-blue-50 hover:text-blue-500"
          href="/account/projects"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Meine Projekte
        </a>
        <a
          className="group block w-full text-black px-4 py-1.5 cursor-pointer transition text-left hover:bg-blue-50 hover:text-blue-500"
          href="/account/profile"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Account
        </a>
        <button
          className="group block w-full text-black px-4 py-1.5 cursor-pointer transition text-left hover:bg-blue-50 hover:text-blue-500"
          onClick={[Function]}
        >
          Abmelden
        </button>
      </div>
    </div>
  </section>
</div>
`;
